# ROS2_ws

./: .gitignore  bagfile_analyzer.py
src/adaptive_clustering_msgs/all_in_one/launch/: all_launch.py
src/all_in_one/launch/: all_launch.py
src/analysis/: package.xml
src/costmap_has/: package.xml  setup.cfg
src/costmap_has/launch/: all_launch.py
src/cov_warn/: setup.cfg
src/crop/: package.xml
src/crop/launch/: line_crop_launch.py
src/crop/src/: draw_line.cpp  image_concat_bs.cpp  line_detection.cpp  n.crop.cpp  py.py
src/cropbox/: setup.py
src/cropbox/launch/: crop_launch.py
src/debug/: bagfile_analyzer_no_twist.py  tkinter_ros.py
src/debug/analysis/: setup.py
src/debug/bag_file_analyzer/: analysis.html  bagfile_analyzer.py
src/debug/bag_file_analyzer/0831_k_city/: analysis.html
src/debug/cov_warn/: package.xml  setup.py
src/debug/cov_warn/cov_warn/: cov_warn.py
src/debug/path_making/: setup.py
src/debug/path_making/path_making/: db_read.py  db_read_2.py  marker.py  path_making.py  path_making_bs.py  path_making_estop.py  path_separate.py
src/debug/speed_profile/: setup.cfg  setup.py
src/debug/speed_profile/fusion/: package.xml
src/debug/speed_profile/speed_profile/: speed_profile.py
src/dynamic_obstacle_detect/: setup.cfg  setup.py
src/erp42_control/erp42_control/: DB.py  Modifier_param.py  control_frequency_check.py  controller_cone_좌.py  controller_parking.py  controller_parking_1012_1230.py  controller_traffic_light_backup.py  controller_traffic_light_backup_1011.py  mpc_node.py  pid_tunning.py  pid_tunning_2025.py  pure_pursuit.py  state_machine_pp.py  state_machine_st.py  state_machine_ys.py
src/erp42_msgs/src/: test_pub.py
src/fusion/: package.xml
src/fusion/src/: cropbox_bs.cpp  cropbox_bum.cpp  cropbox_ys.cpp
src/hw2/: package.xml  setup.py
src/hw2/hw2/: pub_sub_test.py
src/hw2/launch/: hw2_launch.py
src/hw2_cbuild/: CMakeLists.txt  package.xml
src/hw2_cbuild/src/: cropbox_test.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/jaebaldaera/: setup.cfg  setup.py
src/jaebaldaera/jaebaldaera/: subscriber_node.py
src/jaebaldaera/launch/: jaebaldaera_launch.py
src/localization/all_in_one/: package.xml
src/localization/fusion/: CMakeLists.txt
src/localization/fusion/src/: cropbox_bs.cpp
src/localization/localization_cpp/: CMakeLists.txt  package.xml
src/localization/localization_cpp/src/: gps_dummy.cpp  rotate_yaw.cpp
src/localization/robot_localization/launch/: ekf.launch.py  navsat_transform.launch.py
src/localization/robot_localization/params/: ekf.yaml  navsat_transform.yaml
src/localization/tf/: CMakeLists.txt
src/localization/tf/src/: map_odom_tf_publisher_static(copy) .cpp  map_odom_tf_publisher_static.cpp  map_odom_tf_publisher_static_bs.cpp  odometry_map_frame.cpp
src/localization/velodyne_yaw_track/velodyne_yaw_track/: lidar_heading_estimator.py
src/log/: latest_build
src/no_gps_dwa/: package.xml  setup.py
src/no_gps_pth/: package.xml  setup.py
src/no_gps_pth/launch/: rrt_launch.py
src/no_gps_pth/no_gps_pth/: costmap.py
src/not_in_use/backup/: astar.py
src/not_in_use/costmap_has/: setup.py
src/not_in_use/costmap_has/costmap_has/: pure_pursuit.py
src/not_in_use/dynamic_obstacle_detect/dynamic_obstacle_detect/: dynamic_obstacle_detectater.py
src/not_in_use/no_gps_path/: setup.py
src/not_in_use/no_gps_path/no_gps_path/: dwa_publisher.py
src/not_in_use/no_gps_pth/: setup.cfg
src/not_in_use/no_gps_pth/no_gps_pth/: pure_pursuit.py
src/not_in_use/parking_hybrid_astar/: setup.cfg
src/not_in_use/parking_hybrid_astar/launch/: hybrid_launch.py
src/not_in_use/u_turn/: setup.cfg
src/not_in_use/velodyne_yaw_track/: package.xml  setup.cfg  setup.py
src/obstacle_avoidance_apf/: package.xml  setup.cfg  setup.py
src/obstacle_avoidance_apf/launch/: adf_launch.py
src/obstacle_avoidance_apf/obstacle_avoidance_apf/: apf.py
src/parking/: package.xml  setup.py
src/parking/launch/: parking_launch.py
src/parking/parking/: parking.py  pose_filter.py
src/parking_hybrid_astar/: Read.me  package.xml  setup.py
src/parking_hybrid_astar/launch/: hybrid_launch.py
src/parking_hybrid_astar/parking_hybrid_astar/: erp_42_msg_shooter.py
src/parking_tf/: CMakeLists.txt  package.xml
src/parking_tf/src/: cone_pose_transform.cpp
src/perception/adaptive_clustering/: CMakeLists.txt  package.xml  parameter_설명
src/perception/adaptive_clustering/launch/: adaptive_clustering.launch.py
src/perception/adaptive_clustering/src/: adaptive_clustering (copy).cpp  adaptive_clustering.cpp  adaptive_clustering_backup_1009.cpp  adaptive_clustering_bum.cpp
src/perception/crop/: CMakeLists.txt
src/perception/crop/src/: cropbox_bs.cpp  delaunay_tri.py  draw_path.cpp  z_crop.cpp
src/perception/cropbox/: package.xml  setup.cfg
src/perception/custom_msgs/: CMakeLists.txt  package.xml
src/perception/lidar_dynamic_obstacle_detection/: package.xml  setup.cfg  setup.py
src/perception/lidar_dynamic_obstacle_detection/lidar_dynamic_obstacle_detection/: node.py  node_odom.py
src/perception/plane_fit_ground_filter/: package.xml
src/perception/yolo_msg/: CMakeLists.txt  package.xml
src/plane_fit_ground_filter/: CMakeLists.txt
src/plane_fit_ground_filter/include/: plane_ground_filter.hpp
src/plane_fit_ground_filter/launch/: plane_ground_filter.launch.py
src/plane_fit_ground_filter/src/: plane_ground_filter_core.cpp  plane_ground_filter_node.cpp
src/planning/: mpc_node.py  state_machine_mpc.py
src/planning/backup/: costmap.py  dwa.py
src/planning/dynamic_obstacle_detect/: package.xml
src/planning/erp42_control/: setup.py
src/planning/no_gps_dwa/: setup.cfg
src/planning/no_gps_path/: package.xml  setup.cfg
src/planning/u_turn/: package.xml  setup.py
src/speed_profile/: package.xml
src/speed_profile/fusion/: CMakeLists.txt
src/speed_profile/fusion/src/: cropbox_bs.cpp
src/tf/src/: cone_pose_transform.cpp  map_odom_tf_publisher_MLB.cpp
src/u_turn/u_turn/: DWA.py  delau_planner.py  pure_pursuit.py
(+69 files in other folders)
