<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parking_tf</name>
  <version>0.0.1</version>
  <description>
    A ROS 2 package for transforming cone poses and generating paths in the map frame.
  </description>

  <maintainer email="libok1117@gmail.com">libok</maintainer>
  <license>Apache-2.0</license> <!-- 또는 적절한 라이선스 입력 -->

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
