<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_dynamic_obstacle_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hyeon@todo.todo">hyeon</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-pykalman</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
