<?xml version="1.0"?>
<package format="3">
  <name>yolo_msg</name>
  <version>0.0.0</version>
  <description>Custom messages for YOLO bounding boxes</description>

  <maintainer email="junsu@example.com">Junsu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- ✅ 이 줄을 추가해야 에러가 해결됩니다 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
